# audio-graph-parallelization

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
Conception/: diagramme_cm.dia  diagramme_components.dia  roadmap.txt  use_cases.txt
Samples/: aleatoire4.pd  test.pd
Samples/AG/: audiograph_wcet_test.ag  downsampling_test.ag  seq_test.ag  test.ag  work_stealing_test.ag
Samples/PD/: Metronome.pd  Tonalite.pd  aleatoire.pd  aleatoire2.pd  aleatoire4.pd
benches/: benchmark.rs
data/: hist.py  mesures.py  parse_log.py  schedule_svg.py
rapport/: PSAR_PSTL.lyx  PSAR_PSTL.lyx~  PSAR_PSTL.tex
rapport/hist/: hist_all_ligne.eps  hist_all_losange.eps  hist_all_rateau.eps
rapport/ligne_2_128/: average.eps  misses.eps  worst.eps
rapport/ligne_3_128/: average.eps  misses.eps  worst.eps
rapport/ligne_3_128 _charge/: average.eps  misses.eps  worst.eps
rapport/ligne_3_16/: misses.eps
rapport/ligne_3_256/: misses.eps
rapport/ligne_3_32/: misses.eps
rapport/ligne_3_512/: misses.eps
rapport/ligne_3_64/: misses.eps
rapport/ligne_4_128/: average.eps  misses.eps  worst.eps
rapport/losange_2_128/: average.eps  misses.eps  worst.eps
rapport/losange_3_128/: average.eps  misses.eps  worst.eps
rapport/losange_3_128_charge/: average.eps  misses.eps  worst.eps
rapport/losange_3_16 /: misses.eps
rapport/losange_3_256 /: misses.eps
rapport/losange_3_32 /: misses.eps
rapport/losange_3_512 /: misses.eps
rapport/losange_3_64 /: misses.eps
rapport/losange_4_128/: average.eps  misses.eps  worst.eps
src/: audio_node.rs  audiograph.pest  audiograph.rs  audiograph_edge.rs  audiograph_node.rs  audiograph_parser.rs  lib.rs  main.rs  puredata.pest  puredata_parser.rs  schedule_exec.rs  seq_test.rs  static_sched_exec.rs  static_sched_test.rs  work_stealing_exec.rs  work_stealing_test.rs
tests/: ag_little_graphs.rs
(+1663 files in other folders)
