[package]
name = "audio_graph_parallelization"
version = "0.1.0"
authors = ["Ivan <delgado.ivan@protonmail.com>"]

[[bin]]
name = "agp_bin"
path = "src/main.rs"

[[bin]]
name = "seq_test"
path = "src/seq_test.rs"

[lib]
name = "agp_lib"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
jack = { git = "https://github.com/RustAudio/rust-jack.git" }
pest = "2.1.0"
pest_derive = "2.1.0"
rand = "*"
