[package]
name = "audio_graph_parallelization"
version = "0.1.0"
authors = ["Ivan <delgado.ivan@protonmail.com>"]

[[bin]]
name = "agp_bin"
path = "src/main.rs"

[[bin]]
name = "seq_test"
path = "src/seq_test.rs"

[[bin]]
name = "static_sched_test"
path = "src/static_sched_test.rs"

[[bin]]
name = "work_stealing_test"
path = "src/work_stealing_test.rs"

[lib]
name = "libaudiograph"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
core_affinity = "0.5"
crossbeam = "0.7"
jack = { git = "https://github.com/RustAudio/rust-jack.git" }
pest = "2.1.0"
pest_derive = "2.1.0"
rand = "*"
