[package]
name = "audio_graph_parallelization"
version = "0.1.0"
authors = ["Ivan <delgado.ivan@protonmail.com>"]

[[bin]]
name = "schedule"
path = "src/schedule.rs"

[[bin]]
name = "seq_exec"
path = "src/seq_exec.rs"

[[bin]]
name = "static_sched_exec"
path = "src/static_sched_exec.rs"

[[bin]]
name = "work_stealing_exec"
path = "src/work_stealing_exec.rs"

[lib]
name = "libaudiograph"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
core_affinity = "0.5"
crossbeam = "0.7"
jack = { git = "https://github.com/RustAudio/rust-jack.git" }
pest = "2.1.0"
pest_derive = "2.1.0"
rand = "*"
